<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_goneMarginEnd="8dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/img_item_photo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:scaleType="fitXY"
                android:src="@drawable/my_photo"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp">

                <TextView
                    android:id="@+id/tv_name"
                    style="@style/TextSpec.Name"
                    android:layout_height="wrap_content"
                    android:text="@string/my_name"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/title_email"
                    style="@style/TextSpec.Field"
                    android:layout_marginTop="16dp"
                    android:drawableStart="@drawable/ic_email_20"
                    android:text=""
                    app:layout_constraintStart_toStartOf="@id/tv_name"
                    app:layout_constraintTop_toBottomOf="@id/tv_name" />

                <TextView
                    android:id="@+id/tv_email"
                    style="@style/TextSpec.Value"
                    android:layout_marginStart="16dp"
                    android:text="@string/my_email"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/title_email"
                    app:layout_constraintTop_toTopOf="@id/title_email" />

                <TextView
                    android:id="@+id/title_location"
                    style="@style/TextSpec.Field"
                    android:layout_marginTop="16dp"
                    android:drawableStart="@drawable/ic_location_20"
                    android:text=""
                    app:layout_constraintStart_toStartOf="@id/title_email"
                    app:layout_constraintTop_toBottomOf="@id/tv_email" />

                <TextView
                    android:id="@+id/tv_location"
                    style="@style/TextSpec.Value"
                    android:layout_marginStart="16dp"
                    android:text="@string/my_address"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/title_location"
                    app:layout_constraintTop_toTopOf="@id/title_location" />

                <TextView
                    android:id="@+id/title_instagram"
                    style="@style/TextSpec.Field"
                    android:layout_marginTop="16dp"
                    android:drawableStart="@drawable/instagram"
                    android:text=""
                    app:layout_constraintStart_toStartOf="@id/title_location"
                    app:layout_constraintTop_toBottomOf="@id/tv_location" />

                <TextView
                    android:id="@+id/tv_instagram"
                    style="@style/TextSpec.Value"
                    android:layout_marginStart="16dp"
                    android:text="@string/my_instagram"
                    android:textSize="16sp"
                    android:drawableEnd="@drawable/ic_open_20"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/title_instagram"
                    app:layout_constraintTop_toTopOf="@id/title_instagram" />

                <TextView
                    android:id="@+id/title_linkedin"
                    style="@style/TextSpec.Field"
                    android:layout_marginTop="16dp"
                    android:drawableStart="@drawable/linkedin"
                    android:text=""
                    app:layout_constraintStart_toStartOf="@id/title_instagram"
                    app:layout_constraintTop_toBottomOf="@id/tv_instagram" />

                <TextView
                    android:id="@+id/tv_linkedin"
                    style="@style/TextSpec.Value"
                    android:layout_marginStart="16dp"
                    android:text="@string/my_linkedin"
                    android:textSize="16sp"
                    android:drawableEnd="@drawable/ic_open_20"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/title_linkedin"
                    app:layout_constraintTop_toTopOf="@id/title_linkedin" />

                <TextView
                    android:id="@+id/title_github"
                    style="@style/TextSpec.Field"
                    android:layout_marginTop="16dp"
                    android:drawableStart="@drawable/github"
                    android:text=""
                    app:layout_constraintStart_toStartOf="@id/title_linkedin"
                    app:layout_constraintTop_toBottomOf="@id/tv_linkedin" />

                <TextView
                    android:id="@+id/tv_github"
                    style="@style/TextSpec.Value"
                    android:layout_marginStart="16dp"
                    android:text="@string/my_github"
                    android:textSize="16sp"
                    android:drawableEnd="@drawable/ic_open_20"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/title_github"
                    app:layout_constraintTop_toTopOf="@id/title_github" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>