<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="4dp"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="12dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="8dp"
    app:layout_goneMarginEnd="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_item_photo"
            android:layout_width="110dp"
            android:layout_height="75dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:scaleType="fitXY"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent"
            tools:src="@tools:sample/avatars" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/tv_name"
                style="@style/TextSpec.Name"
                android:text="@string/destination_name"
                android:textSize="20sp"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/title_location"
                style="@style/TextSpec.Field"
                android:text="Lokasi"
                android:layout_width="40dp"
                app:layout_constraintStart_toStartOf="@id/tv_name"
                app:layout_constraintTop_toBottomOf="@id/tv_name" />

            <TextView
                android:id="@+id/tv_location"
                style="@style/TextSpec.Value"
                android:layout_marginStart="16dp"
                android:text="@string/location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/title_location"
                app:layout_constraintTop_toBottomOf="@id/tv_name" />

            <TextView
                android:id="@+id/title_open"
                style="@style/TextSpec.Field"
                android:text="Buka"
                android:layout_width="40dp"
                app:layout_constraintStart_toStartOf="@id/title_location"
                app:layout_constraintTop_toBottomOf="@id/tv_location" />

            <TextView
                android:id="@+id/tv_open"
                style="@style/TextSpec.Value"
                android:layout_marginStart="16dp"
                android:text="@string/open"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/title_open"
                app:layout_constraintTop_toBottomOf="@id/tv_location" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>